--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,11 @@ bind C-a send-prefix
 set-window-option -g mode-keys vi
 set-option -g default-shell /bin/zsh
 
+# sort sessions by name
+bind s choose-tree -sZ -O name
+
 ### thx zserge https://zserge.com/posts/tmux/
-bind-key -n M-n new-window -c "#{pane_current_path}"
+bind-key -n M-n new-window -c "#{pane_current_path}" -n ""
 bind-key -n M-1 select-window -t :1
 bind-key -n M-2 select-window -t :2
 bind-key -n M-3 select-window -t :3
@@ -25,6 +28,7 @@ bind-key -n M-> swap-window -t +1
 bind-key -n M-X confirm-before "kill-window"
 bind-key -n M-v split-window -h -c "#{pane_current_path}"
 bind-key -n M-b split-window -v -c "#{pane_current_path}"
+# bind-key -n M-r command-prompt -I "rename-window #W"
 bind-key -n M-r command-prompt -I "" "rename-window '%%'"
 bind-key -n M-f resize-pane -Z
 bind-key -n M-h select-pane -L
@@ -35,19 +39,30 @@ bind-key -n M-Left select-pane -L
 bind-key -n M-Right select-pane -R
 bind-key -n M-Up select-pane -U
 bind-key -n M-Down select-pane -D
-bind-key -n "M-S-Left" resize-pane -L 1
-bind-key -n "M-S-Right" resize-pane -R 1
-bind-key -n "M-S-Up" resize-pane -U 1
-bind-key -n "M-S-Down" resize-pane -D 1
-bind-key -n "M-H" run-shell 'old=`tmux display -p "#{pane_index}"`; tmux select-pane -L; tmux swap-pane -t $old'
-bind-key -n "M-J" run-shell 'old=`tmux display -p "#{pane_index}"`; tmux select-pane -D; tmux swap-pane -t $old'
-bind-key -n "M-K" run-shell 'old=`tmux display -p "#{pane_index}"`; tmux select-pane -U; tmux swap-pane -t $old'
-bind-key -n "M-L" run-shell 'old=`tmux display -p "#{pane_index}"`; tmux select-pane -R; tmux swap-pane -t $old'
+bind-key -n M-S-Left resize-pane -L 1
+bind-key -n M-S-Right resize-pane -R 1
+bind-key -n M-S-Up resize-pane -U 1
+bind-key -n M-S-Down resize-pane -D 1
+bind-key -n M-H run-shell 'old=`tmux display -p "#{pane_index}"`; tmux select-pane -L; tmux swap-pane -t $old'
+bind-key -n M-J run-shell 'old=`tmux display -p "#{pane_index}"`; tmux select-pane -D; tmux swap-pane -t $old'
+bind-key -n M-K run-shell 'old=`tmux display -p "#{pane_index}"`; tmux select-pane -U; tmux swap-pane -t $old'
+bind-key -n M-L run-shell 'old=`tmux display -p "#{pane_index}"`; tmux select-pane -R; tmux swap-pane -t $old'
 bind-key -n M-x confirm-before "kill-pane"
 bind-key -n M-/ copy-mode
 
-#bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
-bind-key E split-window -h "vim ~/.tmux.conf"
+bind-key E split-window -h "nvim ~/.tmux.conf"
+bind-key V split-window -h "nvim ~/.config/nvim"
+bind-key Z split-window -h "nvim ~/.zshrc"
+bind-key A split-window -h "nvim ~/.zsh.aliases"
+
+bind-key -n M-z send-keys 'source ~/.zshrc' Enter
+bind-key -n M-p send-keys 'python main.py' Enter
+bind-key -n M-N send-keys 'npm run watch' Enter
+bind-key -n M-D send-keys 'from pprint import pprint as pp; import ipdb; ipdb.set_trace()'
+bind-key -n M-t send-keys 'import traceback; traceback.print_stack()' Enter
+bind-key -n M-a send-keys 'from main import app; app.app_context().push(); from app.models import *; from sqlalchemy import select, true, func, or_, text, cast, Date, and_, extract; from sqlalchemy.orm import joinedload, selectinload; from datetime import *' Enter
+#bind-key -n M-s send-keys 'start --no-pg --no-rabbitmq' Enter
+
 
 # Linux system clipboard
 #bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
@@ -60,7 +75,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 set -g mouse on
 set-option -g status-keys vi
 set-option -g set-titles on
-set-option -g set-titles-string 'tmux - #W'
+set-option -g set-titles-string 'tmux - #S - #W'
 set -g bell-action none
 set-option -g visual-bell off
 set-option -g set-clipboard off
@@ -69,14 +84,14 @@ setw -g monitor-activity off
 set -g visual-activity off
 set -g status-style fg=colour15
 set -g status-left ''
-set -g status-right '"#{=21:pane_title}" %H:%M %d-%b-%y'
-set -g status-right-style fg=colour8
+set -g status-right '"#{=21:host}" %H:%M %d-%b-%y'
+set -g status-right-style fg=colour250
 set -g status-interval 10
 setw -g window-status-bell-style fg=colour1
 setw -g window-status-current-style fg=colour2,bold
-setw -g window-status-style fg=colour8
-setw -g window-status-current-format ' #{?#{==:#W,#{b:SHELL}},#{b:pane_current_path},#W} '
-setw -g window-status-format ' #{?#{==:#W,#{b:SHELL}},#{b:pane_current_path},#W} '
+setw -g window-status-style fg=colour250
+setw -g window-status-current-format '[#{window_index}] #W  '
+setw -g window-status-format '[#{window_index}] #W  '
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -88,6 +103,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
+# set -g @plugin 'tmux-plugins/tmux-spot(cmd)ify'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
