--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,12 +65,12 @@ bind-key -n M-a send-keys 'from main import app; app.app_context().push(); from 
 
 
 # Linux system clipboard
-#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-#bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+#bind -T copy-mode-vi Enter send-keys -X copy-pipe "xclip -in -selection clipboard"
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "xclip -in -selection clipboard"
 
 # macOS system clipboard
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "pbcopy"
 
 set -g mouse on
 set-option -g status-keys vi
